--- a/trees.ipynb
+++ b/trees.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 36,
       "metadata": {
         "id": "DIsE6ermjF45"
       },
@@ -33,12 +33,15 @@
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.ensemble import AdaBoostClassifier\n",
+        "from sklearn.ensemble import ExtraTreesClassifier\n",
         "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.model_selection import RandomizedSearchCV\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.impute import KNNImputer\n",
-        "from sklearn.metrics import roc_auc_score"
+        "from sklearn.metrics import roc_auc_score\n",
+        "from scipy.stats import uniform"
       ]
     },
     {
@@ -1846,11 +1849,11 @@
         "print(\"Test set AUC: {}\".format(roc_auc_score(y_test,  ada_baseline.predict(X_test))))"
       ],
       "metadata": {
-        "id": "WP8R0pzUKxIR",
-        "outputId": "4362db15-03d0-4ff6-b5f6-baed32710970",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WP8R0pzUKxIR",
+        "outputId": "4362db15-03d0-4ff6-b5f6-baed32710970"
       },
       "execution_count": 24,
       "outputs": [
@@ -1916,12 +1919,127 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Baseline ExtraTrees model"
+      ],
+      "metadata": {
+        "id": "tL0LijFsSXpg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "et_baseline = ExtraTreesClassifier(random_state=0)\n",
+        "et_baseline.fit(X_train, y_train)\n",
+        "\n",
+        "print(\"Train set AUC: {}\".format(roc_auc_score(y_train, et_baseline.predict(X_train))))\n",
+        "print(\"Test set AUC: {}\".format(roc_auc_score(y_test,  et_baseline.predict(X_test))))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xSVgLIxUSKdG",
+        "outputId": "d40fa5f1-1949-41e7-ca79-f14f960fe123"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train set AUC: 1.0\n",
+            "Test set AUC: 0.499917259942021\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tuning ExtraTrees parameters values"
+      ],
+      "metadata": {
+        "id": "4VcFGbp8TJhO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param_grid = {'n_estimators': [100, 250],\n",
+        "              'max_features': [3, 4, 5, 6, 20],\n",
+        "              'max_depth': [None, 20, 10, 5],\n",
+        "              'min_samples_leaf': [1, 10, 25, 50],\n",
+        "              'min_impurity_decrease': [0, 0.05]}"
+      ],
+      "metadata": {
+        "id": "CaRl0XjaVvl_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipe = Pipeline([\n",
+        "    ('transformer', ColumnTransformer([\n",
+        "        ('scaler', StandardScaler(), [*range(0, 19)])],\n",
+        "         remainder='passthrough')),\n",
+        "    ('imputer', KNNImputer()),\n",
+        "    ('et', ExtraTreesClassifier(random_state=42))\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "_XnLpDU8S3ht"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distr = {\n",
+        "    'et__n_estimators': uniform(10, 990),\n",
+        "    'et__max_features': uniform(1, 50),\n",
+        "    'et__max_depth': uniform(1, 20),\n",
+        "    'et__min_samples_leaf': uniform(1, 50),\n",
+        "    'et__min_impurity_decrease': uniform(0, 0.1)\n",
+        "}\n",
+        "\n",
+        "clf = RandomizedSearchCV(pipe, distr, n_iter=10, cv=5, scoring='roc_auc',\n",
+        "                         random_state=42, n_jobs=-1, verbose=2)\n",
+        "\n",
+        "clf.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', grid.best_score_)\n",
+        "print('Best params: ', grid.best_params_)"
+      ],
+      "metadata": {
+        "id": "fJBHBIU5Toy9",
+        "outputId": "841652f4-adae-4268-9afc-d18691bd38bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "xSVgLIxUSKdG"
+        "id": "SZHwHfOcWrNQ"
       },
       "execution_count": null,
       "outputs": []
