--- a/trees.ipynb
+++ b/trees.ipynb
@@ -1823,7 +1823,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Based on three round of grid search, we can conclude, that the optimal parameters of a random forest are max_depth=5, n_estimators=500"
+        "Based on three round of grid search, we can conclude, that the optimal parameters of a random forest are max_depth=5, n_estimators=500. These values give us average CV AUC of 0.579388"
       ],
       "metadata": {
         "id": "uOY5EMpRGhXH"
@@ -1891,7 +1891,7 @@
       "metadata": {
         "id": "zaIfq3ukNiAr"
       },
-      "execution_count": 26,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -1905,7 +1905,7 @@
         "\n",
         "grid = GridSearchCV(pipe, param_grid, cv=5,\n",
         "                    scoring='roc_auc',\n",
-        "                    verbose=2)\n",
+        "                    verbose=3)\n",
         "\n",
         "grid.fit(X_train_dummies, y_train)\n",
         "\n",
@@ -2008,7 +2008,7 @@
         "}\n",
         "\n",
         "clf = RandomizedSearchCV(pipe, distr, n_iter=10, cv=5, scoring='roc_auc',\n",
-        "                         random_state=42, n_jobs=-1, verbose=2)\n",
+        "                         random_state=42, n_jobs=-1, verbose=5)\n",
         "\n",
         "clf.fit(X_train_dummies, y_train)\n",
         "\n",
@@ -2016,22 +2016,10 @@
         "print('Best params: ', grid.best_params_)"
       ],
       "metadata": {
-        "id": "fJBHBIU5Toy9",
-        "outputId": "841652f4-adae-4268-9afc-d18691bd38bb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "fJBHBIU5Toy9"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
