--- a/trees.ipynb
+++ b/trees.ipynb
@@ -1967,6 +1967,7 @@
     {
       "cell_type": "code",
       "source": [
+        "### DELETE THIS CELL ###\n",
         "param_grid = {'n_estimators': [100, 250],\n",
         "              'max_features': [3, 4, 5, 6, 20],\n",
         "              'max_depth': [None, 20, 10, 5],\n",
