--- a/trees.ipynb
+++ b/trees.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 1,
       "metadata": {
         "id": "DIsE6ermjF45"
       },
@@ -46,13 +46,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kHEXmT02jKEi",
-        "outputId": "a649239b-3871-4033-86eb-8fe13d0f6570"
+        "outputId": "77062fbc-b793-4498-e544-8459fb9c9880"
       },
       "outputs": [
         {
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "P1hnTgRPjF48"
       },
@@ -93,14 +93,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
         },
         "id": "u08tSgCSjF4-",
-        "outputId": "b4287caa-44cd-4e92-a123-e50f0079216a"
+        "outputId": "3c401598-859b-49f9-a56b-73e50d83277b"
       },
       "outputs": [
         {
@@ -160,7 +160,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1b4a0059-9121-4012-99cd-5dd777e86e28\">\n",
+              "  <div id=\"df-90c7fde3-039a-42e8-a26c-3c37fd396bd6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -328,7 +328,7 @@
               "</table>\n",
               "<p>5 rows × 64 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b4a0059-9121-4012-99cd-5dd777e86e28')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-90c7fde3-039a-42e8-a26c-3c37fd396bd6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -379,12 +379,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1b4a0059-9121-4012-99cd-5dd777e86e28 button.colab-df-convert');\n",
+              "          document.querySelector('#df-90c7fde3-039a-42e8-a26c-3c37fd396bd6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1b4a0059-9121-4012-99cd-5dd777e86e28');\n",
+              "          const element = document.querySelector('#df-90c7fde3-039a-42e8-a26c-3c37fd396bd6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -407,7 +407,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ],
       "source": [
@@ -416,13 +416,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5NGndehkjF4_",
-        "outputId": "c75ef506-76a2-4640-97d7-9c5e307c60f1"
+        "outputId": "ad973646-c620-4965-aa14-cda657f09f46"
       },
       "outputs": [
         {
@@ -457,9 +457,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JtSl-esEZ4pd",
-        "outputId": "f0f349a6-cea8-4b05-d405-73659593f27c"
+        "outputId": "8d0494e2-32c5-4f7e-b317-91e1907eef5c"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -547,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "tS6F5ZQJjF5I"
       },
@@ -1372,7 +1372,7 @@
         "id": "oIqSIaXPWRT2",
         "outputId": "cb3795c6-cfe2-442a-df94-0c936ea97639"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1416,7 +1416,7 @@
       "metadata": {
         "id": "W5bW903AXwB0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1855,7 +1855,7 @@
         "id": "WP8R0pzUKxIR",
         "outputId": "4362db15-03d0-4ff6-b5f6-baed32710970"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1891,7 +1891,7 @@
       "metadata": {
         "id": "zaIfq3ukNiAr"
       },
-      "execution_count": 47,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1905,7 +1905,7 @@
         "\n",
         "grid = GridSearchCV(pipe, param_grid, cv=5,\n",
         "                    scoring='roc_auc',\n",
-        "                    verbose=3)\n",
+        "                    verbose=3, n_jobs=-1)\n",
         "\n",
         "grid.fit(X_train_dummies, y_train)\n",
         "\n",
@@ -1913,10 +1913,25 @@
         "print('Best params: ', grid.best_params_)"
       ],
       "metadata": {
-        "id": "H4VkXwUeOPhb"
+        "id": "H4VkXwUeOPhb",
+        "outputId": "1219d540-e613-454a-bc17-6de115981d3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fitting 5 folds for each of 36 candidates, totalling 180 fits\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1943,7 +1958,7 @@
         "id": "xSVgLIxUSKdG",
         "outputId": "d40fa5f1-1949-41e7-ca79-f14f960fe123"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1994,7 +2009,7 @@
       "metadata": {
         "id": "_XnLpDU8S3ht"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
