--- a/trees.ipynb
+++ b/trees.ipynb
@@ -1829,15 +1829,62 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "In the first round of grid search models with the lowest learning rate and the lowest number of trees were selected. So in the second round values of these parameters will be decreased"
       ],
       "metadata": {
-        "id": "c9wC2m6vVEe7"
+        "id": "bzCpe8VofBKr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Round 2"
+      ],
+      "metadata": {
+        "id": "CsP1yoOMfn_B"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param_grid = {\n",
+        "    'ada__learning_rate': [0.1, 0.01, 0.001, 0.0001, 0.00001],\n",
+        "    'ada__n_estimators': [100, 50, 25],\n",
+        "    'ada__base_estimator__max_depth': [5, 3, 1]\n",
+        "}\n",
+        "\n",
+        "grid = GridSearchCV(pipe, param_grid, cv=5,\n",
+        "                    scoring='roc_auc',\n",
+        "                    verbose=3)\n",
+        "\n",
+        "grid.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', grid.best_score_)\n",
+        "print('Best params: ', grid.best_params_)"
+      ],
+      "metadata": {
+        "id": "jGvfH0rIefri",
+        "outputId": "08f75abb-5aff-4b09-b208-385c3ea063d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 45 candidates, totalling 225 fits\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=5, ada__learning_rate=0.1, ada__n_estimators=100;, score=0.527 total time=  59.9s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=5, ada__learning_rate=0.1, ada__n_estimators=100;, score=0.550 total time=  52.7s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=5, ada__learning_rate=0.1, ada__n_estimators=100;, score=0.553 total time=  45.6s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=5, ada__learning_rate=0.1, ada__n_estimators=100;, score=0.558 total time=  48.9s\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
