--- a/trees.ipynb
+++ b/trees.ipynb
@@ -52,14 +52,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kHEXmT02jKEi",
-        "outputId": "0ee5630b-0a2a-4782-d7db-8542682727e8"
+        "outputId": "44c8e834-ec1f-4f2b-eccb-f973d7c41a60"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
+            "Mounted at /content/drive/\n"
           ]
         }
       ],
@@ -100,7 +100,7 @@
           "height": 317
         },
         "id": "u08tSgCSjF4-",
-        "outputId": "833d82eb-b9fa-4086-94dd-910db936be75"
+        "outputId": "210c2cc7-2e9f-41e1-b690-a2e1615e6bf3"
       },
       "outputs": [
         {
@@ -160,7 +160,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b7e7813e-2d84-4d87-92a6-b24ce4189d94\">\n",
+              "  <div id=\"df-d640181a-3a8c-4ed4-bdf4-a860a5cc00a7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -328,7 +328,7 @@
               "</table>\n",
               "<p>5 rows × 64 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b7e7813e-2d84-4d87-92a6-b24ce4189d94')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d640181a-3a8c-4ed4-bdf4-a860a5cc00a7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -379,12 +379,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b7e7813e-2d84-4d87-92a6-b24ce4189d94 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d640181a-3a8c-4ed4-bdf4-a860a5cc00a7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b7e7813e-2d84-4d87-92a6-b24ce4189d94');\n",
+              "          const element = document.querySelector('#df-d640181a-3a8c-4ed4-bdf4-a860a5cc00a7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -422,7 +422,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5NGndehkjF4_",
-        "outputId": "352ca610-2c35-4dce-9812-94f8f95c0cce"
+        "outputId": "12573b3f-1342-43db-f6bf-1c239a221466"
       },
       "outputs": [
         {
@@ -457,7 +457,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JtSl-esEZ4pd",
-        "outputId": "5b83cc9e-5ef7-4d7c-da44-d20d9497a8d7"
+        "outputId": "a8260c8f-70f9-42d0-9bf1-52230a3171dc"
       },
       "execution_count": 6,
       "outputs": [
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "EqxsdrTDjF5H"
       },
@@ -547,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "tS6F5ZQJjF5I"
       },
@@ -1123,7 +1123,7 @@
       "metadata": {
         "id": "W5bW903AXwB0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1598,7 +1598,7 @@
       "metadata": {
         "id": "zaIfq3ukNiAr"
       },
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1635,7 +1635,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1871,7 +1871,7 @@
         "id": "jGvfH0rIefri",
         "outputId": "173316c6-4c40-4907-a26f-ca07773ca21c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2110,6 +2110,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In the second round of grid search, models with max_depth=1 and low numbers of estimators were selected. So in the third round max_depth values from {3, 2, 1} will be tested with relatively low number of estimators and diffenent values of learning_rate"
+      ],
+      "metadata": {
+        "id": "Is5AfghnWwLr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Round 3"
+      ],
+      "metadata": {
+        "id": "wHwDnE5uSX3y"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "param_grid = {\n",
@@ -2134,7 +2152,7 @@
         "id": "01RyxnNBDFCO",
         "outputId": "4390bd61-65a3-4d8f-e1e4-92564cef93de"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2443,6 +2461,99 @@
             "[CV 5/5] END ada__base_estimator__max_depth=1, ada__learning_rate=0.05, ada__n_estimators=10;, score=0.575 total time=  54.0s\n",
             "Best score:  0.5853284951374265\n",
             "Best params:  {'ada__base_estimator__max_depth': 2, 'ada__learning_rate': 0.05, 'ada__n_estimators': 40}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Based on the results of the previous rounds we can conclude, that the optimal values for max_depth is 1 or 2, learning_rate should belong to range from 0.01 to 0.1, and the optimal value for n_estimators is below 50. Taking that into account, we'll perform the 4th round of grid search"
+      ],
+      "metadata": {
+        "id": "7285IRG8Xdhd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Round 4"
+      ],
+      "metadata": {
+        "id": "OOFj-ut_SaMa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param_grid = {\n",
+        "    'ada__learning_rate': [0.1, 0.075, 0.05, 0.025, 0.01],\n",
+        "    'ada__n_estimators': [50, 40, 30, 20, 10],\n",
+        "    'ada__base_estimator__max_depth': [3, 2, 1]\n",
+        "}\n",
+        "\n",
+        "grid = GridSearchCV(pipe, param_grid, cv=5,\n",
+        "                    scoring='roc_auc',\n",
+        "                    verbose=3)\n",
+        "\n",
+        "grid.fit(X_train_dummies, y_train)\n",
+        "\n",
+        "print('Best score: ', grid.best_score_)\n",
+        "print('Best params: ', grid.best_params_)"
+      ],
+      "metadata": {
+        "id": "wcO3g4zuSgO2",
+        "outputId": "b005a985-5590-427e-dd6b-4d05aad9682f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 75 candidates, totalling 375 fits\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=50;, score=0.586 total time=  46.0s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=50;, score=0.571 total time=  35.5s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=50;, score=0.582 total time=  37.2s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=50;, score=0.576 total time=  35.8s\n",
+            "[CV 5/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=50;, score=0.575 total time=  35.4s\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=40;, score=0.587 total time=  37.3s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=40;, score=0.577 total time=  35.0s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=40;, score=0.582 total time=  33.7s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=40;, score=0.579 total time=  32.4s\n",
+            "[CV 5/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=40;, score=0.574 total time=  33.0s\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=30;, score=0.587 total time=  33.5s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=30;, score=0.578 total time=  37.4s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=30;, score=0.583 total time=  31.3s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=30;, score=0.581 total time=  33.8s\n",
+            "[CV 5/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=30;, score=0.573 total time=  31.2s\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=20;, score=0.587 total time=  34.3s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=20;, score=0.583 total time=  32.3s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=20;, score=0.581 total time=  32.0s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=20;, score=0.585 total time=  29.8s\n",
+            "[CV 5/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=20;, score=0.572 total time=  32.6s\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=10;, score=0.588 total time=  31.3s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=10;, score=0.587 total time=  32.5s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=10;, score=0.578 total time=  28.7s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=10;, score=0.585 total time=  30.7s\n",
+            "[CV 5/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.1, ada__n_estimators=10;, score=0.578 total time=  28.4s\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=50;, score=0.583 total time=  38.2s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=50;, score=0.575 total time=  37.0s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=50;, score=0.577 total time=  33.7s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=50;, score=0.576 total time=  36.9s\n",
+            "[CV 5/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=50;, score=0.570 total time=  41.2s\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=40;, score=0.583 total time=  36.5s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=40;, score=0.576 total time=  34.9s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=40;, score=0.578 total time=  33.9s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=40;, score=0.579 total time=  32.5s\n",
+            "[CV 5/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=40;, score=0.570 total time=  42.4s\n",
+            "[CV 1/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=30;, score=0.584 total time=  35.6s\n",
+            "[CV 2/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=30;, score=0.583 total time=  34.5s\n",
+            "[CV 3/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=30;, score=0.582 total time=  33.3s\n",
+            "[CV 4/5] END ada__base_estimator__max_depth=3, ada__learning_rate=0.075, ada__n_estimators=30;, score=0.582 total time=  31.3s\n"
           ]
         }
       ]
