--- a/trees.ipynb
+++ b/trees.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 8,
       "metadata": {
         "id": "DIsE6ermjF45"
       },
@@ -46,20 +46,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kHEXmT02jKEi",
-        "outputId": "44c8e834-ec1f-4f2b-eccb-f973d7c41a60"
+        "outputId": "13f48e54-5f3b-4c4a-930e-47158166ad89"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive/\n"
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
           ]
         }
       ],
@@ -70,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {
         "id": "P1hnTgRPjF48"
       },
@@ -93,14 +93,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
         },
         "id": "u08tSgCSjF4-",
-        "outputId": "210c2cc7-2e9f-41e1-b690-a2e1615e6bf3"
+        "outputId": "ad2daff8-9041-49c8-b439-7b7ffb502a80"
       },
       "outputs": [
         {
@@ -160,7 +160,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d640181a-3a8c-4ed4-bdf4-a860a5cc00a7\">\n",
+              "  <div id=\"df-63cd92fd-86e3-4ad8-ac25-86d2a1a59b4c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -328,7 +328,7 @@
               "</table>\n",
               "<p>5 rows × 64 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d640181a-3a8c-4ed4-bdf4-a860a5cc00a7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63cd92fd-86e3-4ad8-ac25-86d2a1a59b4c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -379,12 +379,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d640181a-3a8c-4ed4-bdf4-a860a5cc00a7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-63cd92fd-86e3-4ad8-ac25-86d2a1a59b4c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d640181a-3a8c-4ed4-bdf4-a860a5cc00a7');\n",
+              "          const element = document.querySelector('#df-63cd92fd-86e3-4ad8-ac25-86d2a1a59b4c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -407,7 +407,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 11
         }
       ],
       "source": [
@@ -416,13 +416,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5NGndehkjF4_",
-        "outputId": "12573b3f-1342-43db-f6bf-1c239a221466"
+        "outputId": "91353244-fba8-41dc-c033-140b6ca0987a"
       },
       "outputs": [
         {
@@ -457,9 +457,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JtSl-esEZ4pd",
-        "outputId": "a8260c8f-70f9-42d0-9bf1-52230a3171dc"
+        "outputId": "abf011f0-06e2-4a6c-a59a-a23502c6ee9c"
       },
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {
         "id": "EqxsdrTDjF5H"
       },
@@ -1598,7 +1598,7 @@
       "metadata": {
         "id": "zaIfq3ukNiAr"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2508,7 +2508,7 @@
         "id": "wcO3g4zuSgO2",
         "outputId": "5a5a65ca-f10c-49ac-ad07-16c7aaa0170c"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2898,6 +2898,20 @@
     {
       "cell_type": "markdown",
       "source": [
+        "The optimal values of an AdaBoost model are the following:\n",
+        "* base_estimator__max_depth: 2\n",
+        "* learning_rate: 0.05\n",
+        "* n_estimators: 40 <br>\n",
+        "\n",
+        "5-fold cross-validation average AUC a model with these parameters values equals 0.5853284951374265"
+      ],
+      "metadata": {
+        "id": "SH7I7PouJXjx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Baseline ExtraTrees model"
       ],
       "metadata": {
@@ -2918,9 +2932,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xSVgLIxUSKdG",
-        "outputId": "2803066c-8a70-4ee9-ed7f-ae2debc5f2bb"
+        "outputId": "c00a12ca-5f05-40f2-e56b-1799363d65c7"
       },
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -2944,22 +2958,6 @@
     {
       "cell_type": "code",
       "source": [
-        "### DELETE THIS CELL ###\n",
-        "param_grid = {'n_estimators': [100, 250],\n",
-        "              'max_features': [3, 4, 5, 6, 20],\n",
-        "              'max_depth': [None, 20, 10, 5],\n",
-        "              'min_samples_leaf': [1, 10, 25, 50],\n",
-        "              'min_impurity_decrease': [0, 0.05]}"
-      ],
-      "metadata": {
-        "id": "CaRl0XjaVvl_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "pipe = Pipeline([\n",
         "    ('transformer', ColumnTransformer([\n",
         "        ('scaler', StandardScaler(), [*range(0, 19)])],\n",
@@ -2971,7 +2969,7 @@
       "metadata": {
         "id": "_XnLpDU8S3ht"
       },
-      "execution_count": 14,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -2998,7 +2996,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d5ee0fa-3db1-4e10-fc19-22b9d92c8803"
+        "outputId": "81274f06-089a-418c-fbd4-d80c6b30b804"
       },
       "execution_count": null,
       "outputs": [
@@ -3006,7 +3004,20 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 40 candidates, totalling 200 fits\n"
+            "Fitting 5 folds for each of 40 candidates, totalling 200 fits\n",
+            "[CV 1/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  39.0s\n",
+            "[CV 2/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  36.2s\n",
+            "[CV 3/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  32.3s\n",
+            "[CV 4/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  31.4s\n",
+            "[CV 5/5] END et__max_depth=7, et__max_features=29, et__min_impurity_decrease=0.01834347898661638, et__min_samples_leaf=8, et__n_estimators=710;, score=0.500 total time=  32.0s\n",
+            "[CV 1/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  30.2s\n",
+            "[CV 2/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  31.6s\n",
+            "[CV 3/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  28.6s\n",
+            "[CV 4/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  44.5s\n",
+            "[CV 5/5] END et__max_depth=7, et__max_features=19, et__min_impurity_decrease=0.00999749158180029, et__min_samples_leaf=11, et__n_estimators=97;, score=0.500 total time=  28.1s\n",
+            "[CV 1/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  32.6s\n",
+            "[CV 2/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  32.7s\n",
+            "[CV 3/5] END et__max_depth=4, et__max_features=40, et__min_impurity_decrease=0.07080725777960455, et__min_samples_leaf=22, et__n_estimators=318;, score=0.500 total time=  30.0s\n"
           ]
         }
       ]
